Leonel correction chap 2 applied

--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -170,6 +170,6 @@ Scintillator based particle detector arrays can be used to distinguish between t
 
 \subsection{Towards detecting Neutrino Induced Extensive Air Showers}
 \label{sec:EAS_nu}
-Neutrino induced EASs can be differentiated from a regular CR induced EASs by their unique signature. Since neutrinos can interact at any atmospheric depth only the EASs that were initiated very deep in the atmosphere can be differentiated from a CR induced shower which typically starts at the top of the atmosphere. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a cosmic ray induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact and induce an EAS if the volume of the atmosphere through which they traverse is large enough. For zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact till they reach the ground and even if they do, due to the general amount of atmospheric volume at these angles the CR induced EASs are supposed to be indistinguishable from a neutrino shower, at least for a particle detector array at ground. This is due to the fact that the CR induced EASs have not developed enough to significantly reduce or lose their electromagnetic component. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and CR induced EASs. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
+Neutrino induced EASs can be differentiated from a regular CR induced EASs by their unique signature. Since neutrinos can interact at any atmospheric depth only the EASs that were initiated very deep in the atmosphere can be differentiated from a CR induced shower which typically starts at the top of the atmosphere. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a CR induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact and induce an EAS if the volume of the atmosphere through which they traverse is large enough. For zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact till they reach the ground and even if they do, due to the general amount of atmospheric volume at these angles the CR induced EASs are supposed to be indistinguishable from a neutrino shower, at least for a particle detector array at ground. This is due to the fact that the CR induced EASs have not developed enough to significantly reduce or lose their electromagnetic component. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and CR induced EASs. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
 
 Thus, to detect a neutrino induced EAS using surface detector arrays the smoking gun signal is an inclined ($\approx$ zenith angle > $60^{\circ}$) "young" shower. A perfect neutrino air shower detector should have a good angular resolution and a large electron-muon signal separation. However, this signature also not completely background free. Such a signature can also be caused by deeply interacting CR primaries or highly energetic muons emitting bremsstrahlung photons both of which can also induce a young shower at large zenith angles. B meson could also be misidentified as a neutrino as shown in~\cite{article_b_MESONS}. Other processes such as low energy showers coincident with an EAS could also act as background for a neutrino detection. These have been studied in detail in ~\cite{gap_note_2013} and are negated in the analysis through the techniques developed in the reference. 
